[gd_scene load_steps=3 format=3 uid="uid://bnfp7wifletst"]

[ext_resource type="PackedScene" uid="uid://m3v11vm16l8y" path="res://addons/parley/components/node/node_editor.tscn" id="1_ffxbg"]
[ext_resource type="Script" uid="uid://b1eykujmm4kmo" path="res://addons/parley/components/group/group_node_editor.gd" id="2_mkv52"]

[node name="GroupNodeEditor" instance=ExtResource("1_ffxbg")]
script = ExtResource("2_mkv52")
group_name = ""
colour = Color(0, 0, 0, 1)
type = 6

[node name="TitleLabel" parent="TitleContainer/TitlePanelContainer/TitleMarginContainer/TitlePartsContainer" index="0"]
text = "Group [ID: ]"

[node name="GroupNodeNameContainer" type="HBoxContainer" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer" index="0"]
layout_mode = 2

[node name="GroupNodeNameLabel" type="Label" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer/GroupNodeNameContainer" index="0"]
layout_mode = 2
text = "Name: "

[node name="GroupNodeName" type="LineEdit" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer/GroupNodeNameContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="GroupNodeColorContainer" type="HBoxContainer" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer" index="1"]
layout_mode = 2

[node name="GroupNodeColorLabel" type="Label" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer/GroupNodeColorContainer" index="0"]
layout_mode = 2
text = "Colour: "

[node name="GroupNodeColorPickerButton" type="ColorPickerButton" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer/GroupNodeColorContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[connection signal="text_changed" from="BodyMarginContainer/BodyScrollContainer/BodyContainer/GroupNodeNameContainer/GroupNodeName" to="." method="_on_group_node_name_text_changed"]
[connection signal="color_changed" from="BodyMarginContainer/BodyScrollContainer/BodyContainer/GroupNodeColorContainer/GroupNodeColorPickerButton" to="." method="_on_group_node_color_picker_button_color_changed"]
